--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,9 @@ html, body {padding: 0; margin: 0;width:100%;height:100%;box-sizing: border-box;
 .wrap_complete .comp_sec .img_area + .txt_area {
     margin-top: 20px;
 }
+.wrap_complete .comp_sec .txt_area strong {
+    font-family: "Pretendard-Bold";
+}
 .wrap_complete .comp_sec .btn_area {
     margin: 60px auto 0;
     gap:10px;
@@ -194,6 +197,7 @@ html, body {padding: 0; margin: 0;width:100%;height:100%;box-sizing: border-box;
     padding:20.5px 35px;
     width: 100%;
     min-width: 270px;
+    font-family: "Pretendard-Bold";
 }
 
 .wrap_complete .comp_sec .txt_box {
